# sysprog6

./: .gitignore  CMakeLists.txt  README.md
src/: find_all.c  find_one.c
